FIX: docker-compose for mounting node_modules

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - type: bind
         source: ./api
         target: /usr/src/app
-      - /usr/src/app
+      - /usr/src/app/node_modules
     networks:
       - frontend
       - backend
