ADD: design of navigation bar to select

--- a/app/jsconfig.json
+++ b/app/jsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "jsx": "preserve",
     "paths": {
       "~/*": ["./*"],
       "@/*": ["./*"],
       "~~/*": ["./*"],
-      "@@/*": ["./*"]
+      "@@/*": ["./*"],
     }
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
