--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "dotenv": "^16.0.1",
     "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
     "pg": "^8.7.3",
