--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,8 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
