Fix: typo in environment variables in docker-compose.yml causing bug in postgres container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,9 +41,9 @@ services:
     image: postgres:12
     restart: always
     environment:
-      - POSTGRES_USER=<user>
-      - POSTGRES_PASSWORD=<password>
-      - POSTGRES_DB=<database>
+      POSTGRES_USER: <user>
+      POSTGRES_PASSWORD: <password>
+      POSTGRES_DB: <database>
     ports:
       - '5432:5432'
     volumes:
