REFACTORE: app env docker
now services run insides containers as non-root users

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,14 +12,18 @@
 
 FROM node:latest
 
-WORKDIR /usr/src/app
+USER node
 
-COPY ./package*.json ./
+RUN mkdir -p /home/node/app
+
+WORKDIR /home/node/app
+
+COPY --chown=node:node ./package*.json ./
 
 RUN npm install
 
 ENTRYPOINT [ "npm" ]
 
-CMD ["run", "dev", "--", "-o"]
+CMD ["run", "dev"]
 
 EXPOSE 8000
