--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -12,9 +12,13 @@
 
 FROM node:latest
 
-WORKDIR /usr/src/app
+USER node
 
-COPY ./package*.json ./
+RUN mkdir -p /home/node/app
+
+WORKDIR /home/node/app
+
+COPY --chown=node:node ./package*.json ./
 
 RUN npm install
 
