--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,9 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.8"
+    "@nuxtjs/vuetify": "^1.12.3",
+    "nuxt": "3.0.0-rc.8",
+    "sass": "^1.54.5",
+    "vuetify": "^3.0.0-beta.9"
   }
 }
