--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
     "pg": "^8.7.3",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -54,6 +55,7 @@
     "@types/otplib": "^10.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-oauth2": "^1.4.11",
+    "@types/qrcode": "^1.5.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
