--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
+    "joi": "^17.6.0",
     "otplib": "^12.0.1",
     "passport-jwt": "^4.0.0",
     "passport-oauth2": "^1.6.1",
