--- a/api/package.json
+++ b/api/package.json
@@ -29,7 +29,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.0.11",
     "@types/cookie-parser": "^1.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -50,6 +52,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
@@ -57,6 +60,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-oauth2": "^1.4.11",
     "@types/qrcode": "^1.5.0",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
