--- a/app/package.json
+++ b/app/package.json
@@ -11,5 +11,8 @@
     "nuxt": "3.0.0-rc.8",
     "sass": "^1.54.5",
     "vuetify": "^3.0.0-beta.9"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.5.2"
   }
 }
