TEST: otp input for double authentication doesn't work in vue3: here i do: npm update, npm install vue3-otp

--- a/app/package.json
+++ b/app/package.json
@@ -11,5 +11,9 @@
     "nuxt": "3.0.0-rc.8",
     "sass": "^1.54.5",
     "vuetify": "^3.0.0-beta.9"
+  },
+  "dependencies": {
+    "mdi": "^2.2.43",
+    "vue3-otp-input": "^0.3.6"
   }
 }
