--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cookie-parser": "^1.4.3",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -38,6 +39,7 @@
     "joi": "^17.6.0",
     "otplib": "^12.0.1",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
     "pg": "^8.7.3",
     "qrcode": "^1.5.1",
@@ -50,11 +52,13 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/otplib": "^10.0.0",
     "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/passport-oauth2": "^1.4.11",
     "@types/qrcode": "^1.5.0",
     "@types/supertest": "^2.0.11",
