--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "vuetify": "^3.0.0-beta.9"
   },
   "dependencies": {
+    "nuxt-socket-io": "^3.0.6",
     "socket.io-client": "^4.5.2"
   }
 }
