--- a/api/package.json
+++ b/api/package.json
@@ -33,12 +33,14 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.0.11",
     "@types/cookie-parser": "^1.4.3",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
+    "multer": "^1.4.5-lts.1",
     "otplib": "^12.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
