--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,7 +6,7 @@
 #    By: lperson- <lperson-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/08/01 10:45:03 by lperson-          #+#    #+#              #
-#    Updated: 2022/08/25 13:55:57 by lperson-         ###   ########.fr        #
+#    Updated: 2022/09/30 13:06:55 by lperson-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,4 +28,4 @@ ENTRYPOINT [ "npm" ]
 
 CMD ["run", "dev"]
 
-EXPOSE 8000
+EXPOSE 8000 24678
